--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             <!-- container_dati -->
             <div class="container_dati">
                 <!-- input nome e cognome -->
-                <label for="nome">Nome e Cognome</label>
-                <input id="nome" type="text" name="nome" placeholder="Inserisci il tuo nome">
+                <label for="nome">Nome Cognome</label>
+                <input class="little_box" id="nome" type="text" name="nome" placeholder="Inserisci il tuo nome">
                 <!-- fine input nome e cognome -->
 
                 <!-- input numero km -->
                 <label for="km">Km da percorrere</label>
-                <input id="km" type="text" name="km" placeholder="Inserisci i km">
+                <input class="little_box" id="km" type="text" name="km" placeholder="Inserisci i km">
                 <!-- fine input numero km -->
 
                 <!-- select numero età -->
                 <label for="fascia-eta">Fascia d'et&grave;</label>
-                <select name="fascia-eta" id="fascia">
+                <select class="little_box" name="fascia-eta" id="fascia">
                     <option value="minorenne">Minorenne</option>
                     <option value="maggiorenne">Maggiorenne</option>
                     <option value="over65">Over 65</option>
@@ -42,8 +42,8 @@
 
                 <!-- container_btn -->
                 <div class="container_btn">
-                    <button id="calcolaPrezzo" name="calacolaPrezzo">Genera</button>
-                    <button id="annulla" name="annulla">Annulla</button>
+                    <button id="calcolaPrezzo" name="calacolaPrezzo" class="red">Genera</button>
+                    <button id="annulla" name="annulla" class="red">Annulla</button>
                 </div>
                 <!-- fine container_btn -->
             </div>
@@ -55,7 +55,36 @@
         <div id="container_box">
             <div class="biglietto_box">
                 <div id="biglietto" class="box">
-                    Esempio di box che compare
+                    <!-- table -->
+                    <table>
+                    <!-- intestazione tabella -->
+                        <thead>
+                            <tr>
+                                <th><strong>DETTAGLIO PASSEGGERI</strong></th>
+                            </tr>
+                        </thead>
+                        <!-- corpo tabella -->
+                        <tbody>
+                            <tr class="white">
+                                <hr>
+                                <td class="gray">NOME PASSEGGERO</td>
+                                <td> Offerta</td>
+                                <td> Carrozza</td>
+                                <td id="codiceTreno"> Codice CP</td>
+                                <td> Costo biglietto</td>
+                            </tr>
+                            <tr>
+                                <td class="gray"> </td>
+                                <td> Biglietto Standard</td>
+                                <td> 2</td>
+                                <td> 90001</td>
+                                <td> 0.00€</td>
+                            </tr>
+                        </tbody>
+                        <hr>
+                        <!-- chiusura tabella -->
+                    </table>
+                    <!-- fine table -->
                 </div>
             </div>
         </div>
