update prezzo biglietto

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
 
                 <!-- select numero età -->
                 <label for="fascia-eta">Fascia d'età</label>
-                <select class="little_box" name="fascia-eta" id="fascia">
-                    <option value="minorenne">Minorenne</option>
-                    <option value="maggiorenne">Maggiorenne</option>
-                    <option value="over65">Over 65</option>
+                <select class="little_box" name="fascia-eta" id="fascia-eta">
+                    <option value="17">Minorenne</option>
+                    <option value="19">Maggiorenne</option>
+                    <option value="66">Over 65</option>
                 </select>
                 <!-- fine select numero età -->
                 <br>
                 <!-- container_btn -->
                 <div class="container_btn">
-                    <button id="calcolaPrezzo" name="calacolaPrezzo" class="red" onclick="myFunction()">Genera</button>
-                    <button id="annulla" name="annulla" class="red" onclick="myFunction()">Annulla</button>
+                    <button id="calcolaPrezzo" name="calacolaPrezzo" class="red">Genera</button>
+                    <button id="annulla" name="annulla" class="red">Annulla</button>
                 </div>
                 <!-- fine container_btn -->
             </div>
