--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- container_box -->
         <h1 class="title">IL TUO BIGLIETTO</h1>
         <div id="container_box">
-            <div class="biglietto_box">
+            <div id="biglietto_box">
                 <div id="biglietto" class="box">
                     <!-- table -->
                     <table>
@@ -74,10 +74,10 @@
                                 <td> Costo biglietto</td>
                             </tr>
                             <tr>
-                                <td class="gray"> </td>
+                                <td id="passeggero" class="gray"> </td>
                                 <td> Biglietto Standard</td>
                                 <td> 2</td>
-                                <td> 90001</td>
+                                <td id="codiceTreno"> </td>
                                 <td id="prezzo"> </td>
                             </tr>
                         </tbody>
