--- a/index.html
+++ b/index.html
@@ -56,27 +56,27 @@
             <div id="biglietto_box">
                 <div id="biglietto" class="box">
                     <!-- table -->
-                    <table>
+                    <table class="table">
                     <!-- intestazione tabella -->
                         <thead>
                             <tr>
-                                <th><strong>DETTAGLIO PASSEGGERI</strong></th>
+                                <th class="dettaglio"><strong>DETTAGLIO PASSEGGERI</strong></th>
                             </tr>
                         </thead>
                         <!-- corpo tabella -->
                         <tbody>
-                            <tr class="white">
+                            <tr class="text" class="white">
                                 <hr>
                                 <td class="gray">NOME PASSEGGERO</td>
                                 <td> Offerta</td>
                                 <td> Carrozza</td>
-                                <td id="codiceTreno"> Codice CP</td>
+                                <td> Codice CP</td>
                                 <td> Costo biglietto</td>
                             </tr>
-                            <tr>
-                                <td id="passeggero" class="gray"> </td>
-                                <td> Biglietto Standard</td>
-                                <td> 2</td>
+                            <tr class="text">
+                                <td id="passeggero"> </td>
+                                <td id="offerta"> </td>
+                                <td id="carrozza"> </td>
                                 <td id="codiceTreno"> </td>
                                 <td id="prezzo"> </td>
                             </tr>
