--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
                 <br>
                 <!-- container_btn -->
                 <div class="container_btn">
-                    <button id="calcolaPrezzo" name="calacolaPrezzo" class="red">Genera</button>
-                    <button id="annulla" name="annulla" class="red">Annulla</button>
+                    <div>
+                        <button id="calcolaPrezzo" name="calacolaPrezzo" class="red">Genera</button>
+                    </div>
+                    <br>
+                    <div>
+                        <button id="annulla" name="annulla" class="red">Annulla</button>
+                    </div>
                 </div>
                 <!-- fine container_btn -->
             </div>
