--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <!-- container_btn -->
                 <div class="container_btn">
                     <div>
-                        <button id="calcolaPrezzo" name="calacolaPrezzo" class="red">Genera</button>
+                        <button id="calcolaPrezzo" name="calacolaPrezzo" class="btn_red">Genera</button>
                     </div>
                     <br>
                     <div>
-                        <button id="annulla" name="annulla" class="red">Annulla</button>
+                        <button id="annulla" name="annulla" class="btn_red">Annulla</button>
                     </div>
                 </div>
                 <!-- fine container_btn -->
