--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <!-- input -->
                 <div class="dati_input">
                     <!-- input nome e cognome -->
-                    <label for="nome">Nome Cognome</label>
+                    <label class="burgundy" for="nome">Nome Cognome</label>
                     <!-- input numero km -->
-                    <label for="km">Km da percorrere</label>
+                    <label class="burgundy" for="km">Km da percorrere</label>
                     <!-- select numero età -->
-                    <label for="fascia-eta">Fascia d'età</label>
+                    <label class="burgundy" for="fascia-eta">Fascia d'età</label>
                 </div>
                 <!-- fine input -->
 
